# judgellm

./: DESIGN.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: simple_api_judge.py  simple_judge.py
src/judgellm/: __init__.py  classifiers.py  constants.py  executors.py  utils.py
