[project]
name = "v-judgellm"
version = "0.1.0"
description = "Utilise various LLM as a Judge for Classification"
readme = "README.md"
authors = [
    { name = "09jayy", email = "jibril.hairulzihan@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "openai>=2.31.0",
    "protobuf>=7.34.1",
    "python-dotenv>=1.2.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
